static/css/main.css
@font-face {
    font-family: HP001;
    font-weight: normal;
    src: url(/static/font/HP001N30.ttf);
}
@font-face {
    font-family: HP001;
    font-weight: bold;
    src: url(/static/font/HP001B30.ttf);
}
body{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
textarea
{
    width:100%;
    height: 100%;
    font-size:72pt;
    background-color: antiquewhite;
    
}
.textwrapper
{
    border:1px solid #999999;
    width: 70%;
    height: 100%;
}

p{
    margin: 0;
}

#result{    
    padding-left: 14.4pt;
    padding-top: calc(3pt + 14.4pt *2 );
    font-size:72pt ;
    font-family: HP001; 
    font-weight: bold;
    line-height: 72pt;
    margin-top: 20px;
}

#result>p:not(:first-child){
    margin-top: calc(14.4pt * 3);
}

#result>p:last-child::after{
    content: ' ';
    display: block;
    height: calc(14.4pt * 3);
}

#result.small{
    padding-top: calc(2pt + 14.4pt *4);
    font-size: 36pt;
    line-height: 36pt;
}

#result.small>p:not(:first-child) {
    margin-top: calc(14.4pt * 1.5);
}

#rulesformitem{
    display: flex;
    height: 200px;
    flex-direction: row;
    /* width: 70%; */
}


.formitem{
    margin-top: 50px;
    width: 100%;
    height: 30%;
}

.logo{
    text-align: center;
}

.option{
    /* border:1px solid #999999; */
    width: 30%;
    height: 100%;  
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.option div{
    width: 100%;
    font-size: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.font-size-form{
    /* background-color: #999999; */
    width: 70%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.font-color-form{
    /* background-color: aquamarine; */
    width: 70%;
}   

.font-size-select{
    float: right;
}

.font-size-label{
    width: 20%;
}

.font-size-input{
    margin-left: 3%;
    width: 60%;
}

.font-size-select{
    width: 20%;
}

.font-color-input{
    float: right;
}

.board.black{
    color: white;
    background-color: #496e53;
}

.board.white{
    color: black;
    background-color: #ffffff;
}

.grid-big {
    background-size: calc(14.4pt * 4) calc(14.4pt * 4);
    background-position: 14.4pt 28.8pt
} 

.grid-small {
    background-size: 14.4pt 14.4pt;
}

.black .grid-big {
    background-image:
      repeating-linear-gradient(#ccc 0 2px, transparent 2px 100%),
      repeating-linear-gradient(90deg, #ccc 0 2px, transparent 2px 100%);
}

.black .grid-small {
    background-image:
      repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
      repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
}

.white .grid-big {
    background-image:
      repeating-linear-gradient(rgb(217, 210, 255) 0 2px, transparent 2px 100%),
      repeating-linear-gradient(90deg, rgb(217, 210, 255) 0 2px, transparent 2px 100%);
}

.white .grid-small {
    background-image:
      repeating-linear-gradient(rgb(217, 210, 255) 0 1px, transparent 1px 100%),
      repeating-linear-gradient(90deg, rgb(217, 210, 255) 0 1px, transparent 1px 100%);
}

